--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Start page</title>
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/5.3.5/dist/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.5/dist/css/bootstrap.min.css}">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <a class="btn btn-primary" href="/people">People</a>
-    <a class="btn btn-info" href="/meetings">Meetings</a>
+<!--    <a class="btn btn-primary" href="/people">People</a>-->
+<!--    <a class="btn btn-info" href="/meetings">Meetings</a>-->
+    <div th:replace="fragments/general :: header"></div>
 
 <script th:src="@{webjars/bootstrap/5.3.5/dist/js/bootstrap.bundle.min.js}"></script>
 </body>
